# almonds

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  default_categories.yaml  example.env  prometheus.yml  pyproject.toml
.github/workflows/: python_tests.yaml
src/: run.py
src/almonds/: app.py  config.py  server.py
src/almonds/api/: budget.py  goals.py  home.py  login.py  plaid.py  root.py  transaction.py  transactions.py
src/almonds/config/: logging.conf
src/almonds/crud/: budget.py  category.py  goal.py  plaid_item.py  transaction.py  user.py  user_crud.py  user_settings.py
src/almonds/crypto/: cryptograph.py
src/almonds/db/: base.py  database.py
src/almonds/models/: budget.py  category.py  constants.py  goal.py  plaid_item.py  transaction.py  user.py  user_settings.py
src/almonds/plaid/: client.py  core.py
src/almonds/schemas/: budget.py  category.py  goal.py  plaid_item.py  transaction.py  user.py  user_settings.py
src/almonds/scripts/: gen_default_categories.py
src/almonds/services/: charts.py  login.py  plaid_sync.py  plaid_transaction_category_map.py  transactions.py
src/almonds/sql/: default_categories_20240811_2144.sql
src/almonds/static/: almonds_plaid_transaction_map.csv
src/almonds/templates/: 404.html  500.html  _dashboard_tiles.html  _login_form.html  _navigation.html  _new_user_form.html  base.html  base_child.html  budget.html  create_user.html  create_user_view.html  csrf_error.html  filters.py  goals.html  home.html  landing_page.html  login.html  login_view.html  oauth.html  plaid.html  root.html  settings.html  transactions.html
src/almonds/ui/: app.css  app.py  transactions.py
src/almonds/utils/: logging.py  status_code.py  ui.py
src/test_almonds/: conftest.py
src/test_almonds/crud/: test_budget.py  test_category.py  test_goal.py  test_transaction.py  test_user.py
src/test_almonds/crypto/: test_cryptograph.py
src/test_almonds/services/: test_login.py
(+18 files in other folders)
