[project]
name = "almonds"
version = "0.1.0"
description = "just your affordable, personal finance app"
authors = [{name="kentonvp", email= "kentonvanp@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "Flask>=3.0.3",
  "sqlalchemy>=2.0.31",
  "pydantic>=2.10",
  "email-validator>=2.2.0",
  "plaid-python>=29.0.0",
  "pandas>=2.2",
  "plotly>=6.0",
  "prometheus-flask-exporter>=0.23",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "coverage",
  "pytest-cov",
]

[tool.isort]
profile = "black"
