[project]
name = "almonds"
version = "0.1.0"
description = "just your affordable, personal finance app"
authors = [{name="kentonvp", email= "kentonvanp@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "Flask >=3.0.3, < 4",
  "Flask-WTF >= 1.2.1, < 2",
  "sqlalchemy >= 2.0.31, < 3",
  "pydantic >= 2.10, < 3",
  "email-validator >= 2.2.0, < 3",
  "plaid-python >= 29.0.0, < 30",
  "pandas >= 2.2, < 3",
  "plotly >= 6.0, < 7",
  "prometheus-flask-exporter >= 0.23, < 1",
  "cryptography >= 44.0, < 45",
  "apscheduler >= 3.11.0, < 4"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "coverage",
  "pytest-cov",
]

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
almonds = ["logging.conf"]
